--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-log4j2:$springBootVersion"
     implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
 
+    implementation 'org.springframework.kafka:spring-kafka:2.9.2'
+
     implementation "io.micrometer:micrometer-core:$micrometerVersion"
     implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
